hphp/test/slow/hack-arrays/callable.php.expectf
====================================================
int(1)
====================================================
int(2)
====================================================
int(3)
====================================================
int(4)
====================================================

Fatal error: Call to undefined function call3() in %s on line 48
====================================================

Fatal error: Call to undefined function call3() in %s on line 48
====================================================
array(1) {
  [0]=>
  int(7)
}
====================================================
array(1) {
  [0]=>
  int(8)
}
====================================================

Fatal error: Invalid callable (array) in %s on line 9
====================================================

Fatal error: Invalid callable (array) in %s on line 9
====================================================

Warning: Invalid argument: function: not a valid callback array in %s on line 10
NULL
====================================================

Warning: Invalid argument: function: not a valid callback array in %s on line 10
NULL
====================================================

Fatal error: Call to undefined function call3() in %s on line 48
